12 implement context cursor (#21)
* Added most necessary files for the cursor, need to fix useContext to get position of mouse

* Update current status of cursor

* Successfully add cursor controlled by useRef into the app through appWrapper

* Finished handling mouse exiting and entering window

* Adding WithHover

* Finished adding WithHover

* Save point 2, mouse dragging fixing

* Fixes exiting status

* Finished context cursor

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,4 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  cursor: none !important;
+}
 
+div .block {
+  border-radius: 4px !important;
+}
+div .text {
+  height: 30px !important;
+  width: 3px !important;
+  border-radius: 1px !important;
+}
+div .pressing {
+  opacity: 0.5 !important;
+  transition: opacity 0s !important;
+}
