--- a/app/globals.css
+++ b/app/globals.css
@@ -7,21 +7,22 @@
 }
 
 .overlay {
-  position: absolute;
+  position: fixed;
   left: 0%;
   top: 0%;
   right: 0%;
   bottom: 0%;
   z-index: 100;
   display: block;
-  width: auto;
-  height: auto;
+  width: 100%;
+  height: 100%;
   background-image: url('/webp/cardboardTexture.webp'),
     url('/png/cardboardTexture.png');
   background-repeat: repeat;
   background-size: auto;
   background-position: center;
   opacity: 0.3;
+  pointer-events: none !important;
 }
 
 div .block {
