--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,25 @@
   cursor: none !important;
 }
 
+.overlay {
+  position: fixed;
+  left: 0%;
+  top: 0%;
+  right: 0%;
+  bottom: 0%;
+  z-index: 100;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-image: url('/webp/cardboardTexture.webp'),
+    url('/png/cardboardTexture.png');
+  background-repeat: repeat;
+  background-size: auto;
+  background-position: center;
+  opacity: 0.3;
+  pointer-events: none !important;
+}
+
 div .block {
   border-radius: 4px !important;
 }
