--- a/app/(portfolio)/globals.css
+++ b/app/(portfolio)/globals.css
@@ -16,8 +16,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  background-image: url('/webp/cardboardTexture.webp'),
-    url('/png/cardboardTexture.png');
+  background-image: url('/webp/cardboardTexture.webp');
   background-repeat: repeat;
   background-size: auto;
   background-position: center;
